# resto

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: unit-tests.yml
nginx/: Dockerfile  start.sh
nginx/templates/: nginx.conf.template
src/: app.py  controller.py  main.py  main_dev.py
src/auth/: module.py
src/auth/application/: login.py  refresh.py  register.py
src/auth/domain/: errors.py  ports.py
src/auth/infrastructure/: jwt_adapter.py  password_adapter.py
src/auth/presentation/: controllers.py  dtos.py  exception_handler.py  rdtos.py
src/config/domain/: interface.py
src/config/infrastructure/: adapter.py  database_adapter.py
src/inventory/: module.py
src/inventory/application/: add_quantity.py  create_item.py  delete_item.py  get_item.py  list_items.py  reduce_quantity.py  update_item.py
src/inventory/domain/: entity.py  errors.py  ports.py  unit.py
src/inventory/infrastructure/: in_memory_repository.py  mapper.py  repository.py  schema.py
src/inventory/presentation/: controllers.py  dtos.py  exception_handler.py  rdtos.py
src/meals/: module.py
src/meals/application/: create_meal.py  delete_meal.py  get_meal.py  list_meals.py  update_meal.py
src/meals/domain/: entity.py  errors.py  ports.py
src/meals/infrastructure/: in_memory_repository.py  mapper.py  repository.py  schema.py
src/meals/presentation/: controllers.py  dtos.py  exception_handler.py  rdtos.py
src/sales/: module.py
src/users/: module.py
(+64 files in other folders)
